gcc/testsuite/rust/rustc/ui/invalid/invalid-crate-type-macro.rs
#![crate_type = foo!()] // { dg-error "" "" { target *-*-* } }

macro_rules! foo {
    () => {"rlib"};
}

fn main() {}

